Fix maze generator button labels in dark mode
- Added CSS variables --global-input-background-color and --global-input-text-color to all theme files
- Updated layout/_forms.scss to use these variables instead of hardcoded white background
- This ensures button labels are readable in dark mode (white text on light gray background)

--- a/_sass/theme/_air_dark.scss
+++ b/_sass/theme/_air_dark.scss
@@ -44,6 +44,8 @@ html[data-theme="dark"] {
     --global-code-background-color      : #fafafa;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
+    --global-input-background-color     : #{$background-light};
+    --global-input-text-color           : #{$text};
     --global-link-color                 : #{$link};
     --global-link-color-hover           : #{$link-dark};
     --global-link-color-visited         : #{$link-light};
